prize and video

--- a/index.html
+++ b/index.html
@@ -240,7 +240,9 @@
 							<!-- BREAK -->
 							<div class="videowrapper">
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/CegFjNXfmlM" frameborder="0" allowfullscreen></iframe>
-
+							</div>
+							<div class="videowrapper">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/8yo0ZtBL6F4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 
 						</div>
