--- a/prizes.html
+++ b/prizes.html
@@ -653,7 +653,27 @@
 																							<td>33</td>
 																							<td>Vexilar Prize Package</td>
 																						</tr>
-
+																						<tr>
+																							<td>34</td>
+																							<td>BluGold Volleyball Package</td>
+																						</tr>
+																						<tr>
+																							<td>35</td>
+																							<td>BluGold Basketball Package</td>
+																						</tr>
+																						<tr>
+																							<td>36</td>
+																							<td>BluGold Cross Country/Sandbar and Grill Prize Package</td>
+																						</tr>
+																						<tr>
+																							<td>37</td>
+																							<td>BluGold Volleyball/Sandbar and Grill Prize Package</td>
+																						</tr>
+																						<tr>
+																							<td>38</td>
+																							<td>BluGold Basketball Package</td>
+																						</tr>
+																						
 																					</tbody>
 																				</table>
 																			</div>
