update raffle prize

--- a/prizes.html
+++ b/prizes.html
@@ -673,7 +673,10 @@
 																							<td>38</td>
 																							<td>BluGold Basketball Package</td>
 																						</tr>
-																						
+																						<tr>
+																							<td>39</td>
+																							<td>Gift Certificate - The Edge</td>
+																						</tr>
 																					</tbody>
 																				</table>
 																			</div>
