push prize winners

--- a/liveResults.html
+++ b/liveResults.html
@@ -128,7 +128,7 @@
 							<!-- BREAK -->
 							<h2 class="headers">Live Results</h2>
 							<!-- <h3>View live results <a href="https://jigsup-entry.herokuapp.com/publicList">here</a>!</h3> -->
-							<h3>Thank you for those who competed! The live link has been disabled due to the system being slowed down, causing the recording program to slow too.</h3>
+							<h3>You can find the final prize winners on the <a href="pastResults.html">past result</a> page!</h3>
 						</div>
 						<div class="col-xs-6">
 							<br />
