--- a/pastResults.html
+++ b/pastResults.html
@@ -165,6 +165,637 @@
 
 <!-- new -->
 
+<div class="panel panel-default">
+	<a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+		<div class="panel-heading">
+			<h4 class="panel-title">
+				2018
+			</h4>
+			<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+		</div>
+	</a>
+	<div id="collapse5" class="panel-collapse collapse">
+		<div class="panel-body">
+			<div class="row">
+				<div class="col-sm-12">
+					<h2 class="headers">2018 Fish Prize Winners</h2>
+					<div class="table-responsive">
+						<table class="table">
+							<thead>
+								<th>Place</th>
+								<th>Contestant</th>
+								<th>Weight</th>
+								<th>Species</th>
+								<th>Prize</th>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>Travis Turner</td>
+									<td>8.141</td>
+									<td>Northern</td>
+									<td>Scheels Cooler</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>Daniel Erickson</td>
+									<td>7.85</td>
+									<td>Northern</td>
+									<td>Eskimo High Compression 8-in Propane Ice Auger</td>
+								</tr>
+								<tr>
+									<td>3</td>
+									<td>Bryce Koenig</td>
+									<td>6.793</td>
+									<td>Northern</td>
+									<td>Eskimo QuickFlip Two-Man Shelter</td>
+								</tr>
+								<tr>
+									<td>4</td>
+									<td>Mark Eisold</td>
+									<td>6.247</td>
+									<td>Northern</td>
+									<td>Barronett Radar Backwoods Camo Hunting Blind</td>
+								</tr>
+								<tr>
+									<td>5</td>
+									<td>Andrew Hendrickson</td>
+									<td>6.231</td>
+									<td>Northern</td>
+									<td>Eskimo Quickfish 2</td>
+								</tr>
+								<tr>
+									<td>6</td>
+									<td>Todd Staves</td>
+									<td>5.787</td>
+									<td>Northern</td>
+									<td>8-in Ion Ice Auger w/ Reverse</td>
+								</tr>
+								<tr>
+									<td>7</td>
+									<td>Jake Rendmeister</td>
+									<td>5.482</td>
+									<td>Northern</td>
+									<td>River&#39;s Edge Big Foot XL Classic Hang-On Stand</td>
+								</tr>
+								<tr>
+									<td>8</td>
+									<td>Andrew Evonoff</td>
+									<td>5.464</td>
+									<td>Northern</td>
+									<td>Wildgame Innovations Handheld Card Viewer Trail Pad</td>
+								</tr>
+								<tr>
+									<td>9</td>
+									<td>Jake Arneson</td>
+									<td>5.308</td>
+									<td>Northern</td>
+									<td>13 Fishing Wicked Ice Combo</td>
+								</tr>
+								<tr>
+									<td>10</td>
+									<td>Daniel Button</td>
+									<td>5.096</td>
+									<td>Northern</td>
+									<td>Vexilar Fish Scout Camera</td>
+								</tr>
+								<tr>
+									<td>11</td>
+									<td>Joe Miller</td>
+									<td>4.934</td>
+									<td>Northern</td>
+									<td>IFISH PRO TIP UP</td>
+								</tr>
+								<tr>
+									<td>12</td>
+									<td>John Zierden</td>
+									<td>4.868</td>
+									<td>Northern</td>
+									<td>Ice Armor Parka</td>
+								</tr>
+								<tr>
+									<td>13</td>
+									<td>Joel Kurkowski</td>
+									<td>4.716</td>
+									<td>Northern</td>
+									<td>Moultrie A-30 Game Camera</td>
+								</tr>
+								<tr>
+									<td>14</td>
+									<td>Anthony Xiong</td>
+									<td>4.683</td>
+									<td>Northern</td>
+									<td>$50 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>15</td>
+									<td>Tim Esselman</td>
+									<td>4.683</td>
+									<td>Northern</td>
+									<td>Garmin eTrex10 GPS</td>
+								</tr>
+								<tr>
+									<td>16</td>
+									<td>Colby Rubischko</td>
+									<td>4.654</td>
+									<td>Northern</td>
+									<td>Scheels Deluxe Combo Case</td>
+								</tr>
+								<tr>
+									<td>17</td>
+									<td>Mark Eisold</td>
+									<td>4.64</td>
+									<td>Northern</td>
+									<td>Rapala Electric Fillet Knife</td>
+								</tr>
+								<tr>
+									<td>18</td>
+									<td>Jason Brandner</td>
+									<td>4.259</td>
+									<td>Northern</td>
+									<td>Eskimo QuickFlip Two-Man Shelter</td>
+								</tr>
+								<tr>
+									<td>19</td>
+									<td>Kelsey Schwerdtfeger</td>
+									<td>4.255</td>
+									<td>Northern</td>
+									<td>Eskimo P1 Propane Rocker Auger</td>
+								</tr>
+								<tr>
+									<td>20</td>
+									<td>Derrik Sheffield</td>
+									<td>4.115</td>
+									<td>Walleye</td>
+									<td>$50 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>21</td>
+									<td>Leif Berg</td>
+									<td>4.059</td>
+									<td>Northern</td>
+									<td>Eskimo 43cc 10-in Mako Ice Auger</td>
+								</tr>
+								<tr>
+									<td>22</td>
+									<td>Matt Neumueller</td>
+									<td>4.051</td>
+									<td>Northern</td>
+									<td>13 Fishing Descent Ice Reel</td>
+								</tr>
+								<tr>
+									<td>23</td>
+									<td>Teegan Wright</td>
+									<td>4.046</td>
+									<td>Northern</td>
+									<td>Eskimo 8-Inch Hand Auger</td>
+								</tr>
+								<tr>
+									<td>24</td>
+									<td>Adam Richmond</td>
+									<td>3.92</td>
+									<td>Northern</td>
+									<td>Eskimo Quickfish 2</td>
+								</tr>
+								<tr>
+									<td>25</td>
+									<td>Alec Custer</td>
+									<td>3.733</td>
+									<td>Walleye</td>
+									<td>*$500 Cash</td>
+								</tr>
+								<tr>
+									<td>30</td>
+									<td>Brian Danielson</td>
+									<td>3.443</td>
+									<td>Northern</td>
+									<td>Pflueger Monarch Spinning Reel</td>
+								</tr>
+								<tr>
+									<td>35</td>
+									<td>Todd Staves</td>
+									<td>3.171</td>
+									<td>Northern</td>
+									<td>Scheels Outfitters Rectangular Ice Combo Bag + $25 Mega/Holiday GC</td>
+								</tr>
+								<tr>
+									<td>40</td>
+									<td>Matt Crosby</td>
+									<td>2.971</td>
+									<td>Northern</td>
+									<td>River&#39;s Edge Ladder Stand</td>
+								</tr>
+								<tr>
+									<td>45</td>
+									<td>Bill Pooler</td>
+									<td>2.934</td>
+									<td>Northern</td>
+									<td>Frabill Straight Line 101 Ice Reel + $25 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>50</td>
+									<td>Caitlin Setterman</td>
+									<td>2.866</td>
+									<td>Northern</td>
+									<td>Eskimo 43cc 8-in Mako Ice Auger</td>
+								</tr>
+								<tr>
+									<td>55</td>
+									<td>Brent Potaczek</td>
+									<td>2.662</td>
+									<td>Northern</td>
+									<td>Eskimo 8-Inch Hand Auger</td>
+								</tr>
+								<tr>
+									<td>60</td>
+									<td>Walker Lee Brown</td>
+									<td>2.566</td>
+									<td>Northern</td>
+									<td>Scheels Deluxe Combo Case</td>
+								</tr>
+								<tr>
+									<td>65</td>
+									<td>Matt Crosby</td>
+									<td>2.519</td>
+									<td>Northern</td>
+									<td>Eskimo QuickFlip 2</td>
+								</tr>
+								<tr>
+									<td>70</td>
+									<td>Cody ketelboeter</td>
+									<td>2.424</td>
+									<td>Northern</td>
+									<td>8-in Ion Ice Auger w/ Reverse</td>
+								</tr>
+								<tr>
+									<td>75</td>
+									<td>Logan Wright</td>
+									<td>2.345</td>
+									<td>Northern</td>
+									<td>13 Fishing Descent Ice Reel</td>
+								</tr>
+								<tr>
+									<td>80</td>
+									<td>Josh Prince</td>
+									<td>2.153</td>
+									<td>Northern</td>
+									<td>Scheels Outfitters Rectangular Ice Combo Bag + $25 Mega/Holiday GC</td>
+								</tr>
+								<tr>
+									<td>85</td>
+									<td>Shane Mahoney</td>
+									<td>2.105</td>
+									<td>Northern</td>
+									<td>Eskimo QuickFlip One-Man Shelter</td>
+								</tr>
+								<tr>
+									<td>90</td>
+									<td>Becky Germain</td>
+									<td>2.031</td>
+									<td>Northern</td>
+									<td>Pro Classic Ice Fishing Combo</td>
+								</tr>
+								<tr>
+									<td>95</td>
+									<td>Dahlton Bowe</td>
+									<td>1.898</td>
+									<td>Northern</td>
+									<td>Eskimo 7-Inch Hand Auger</td>
+								</tr>
+								<tr>
+									<td>100</td>
+									<td>Robert Arbs</td>
+									<td>1.716</td>
+									<td>Northern</td>
+									<td>Ice Castle</td>
+								</tr>
+								<tr>
+									<td>105</td>
+									<td>Merlin Woodley</td>
+									<td>1.51</td>
+									<td>Northern</td>
+									<td>Eskimo 43cc 10-in Mako Ice Auger</td>
+								</tr>
+								<tr>
+									<td>110</td>
+									<td>Wayne Dahl</td>
+									<td>1.412</td>
+									<td>Crappie</td>
+									<td>Scheels Outfitters Rectangular Ice Combo Bag + $25 Mega/Holiday GC</td>
+								</tr>
+								<tr>
+									<td>115</td>
+									<td>Lisa Tennyson</td>
+									<td>1.314</td>
+									<td>Crappie</td>
+									<td>Frabill Straight Line 101 Ice Reel + $25 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>120</td>
+									<td>Brian Harding</td>
+									<td>1.205</td>
+									<td>Crappie</td>
+									<td>Barronett Radar Backwoods Camo Hunting Blind</td>
+								</tr>
+								<tr>
+									<td>125</td>
+									<td>Aaron Kurkowski</td>
+									<td>1.131</td>
+									<td>Northern</td>
+									<td>SKINZ IT</td>
+								</tr>
+								<tr>
+									<td>130</td>
+									<td>Brandon Barnhardt</td>
+									<td>1.118</td>
+									<td>Crappie</td>
+									<td>Rivers Edge Ladder Stand</td>
+								</tr>
+								<tr>
+									<td>135</td>
+									<td>Sarah Eaton</td>
+									<td>1.043</td>
+									<td>Crappie</td>
+									<td>Eskimo FatFish 949i Ice Shack</td>
+								</tr>
+								<tr>
+									<td>140</td>
+									<td>Jake Anderson</td>
+									<td>1.005</td>
+									<td>Crappie</td>
+									<td>Rivers Edge Big Foot XL Tree Stand</td>
+								</tr>
+								<tr>
+									<td>145</td>
+									<td>Joel Michaelson</td>
+									<td>0.987</td>
+									<td>Walleye</td>
+									<td>Eskimo 7-Inch Hand Auger</td>
+								</tr>
+								<tr>
+									<td>150</td>
+									<td>Brad Frendel</td>
+									<td>0.955</td>
+									<td>Crappie</td>
+									<td>Eskimo FatFish 949i Ice Shack</td>
+								</tr>
+								<tr>
+									<td>155</td>
+									<td>Mitch Bogumill</td>
+									<td>0.935</td>
+									<td>Walleye</td>
+									<td>Pro Classic Ice Fishing Combo</td>
+								</tr>
+								<tr>
+									<td>160</td>
+									<td>Sue Bergh</td>
+									<td>0.918</td>
+									<td>Walleye</td>
+									<td>Frabill Straight Line 101 Ice Reel + $25 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>165</td>
+									<td>Wayne Johnson</td>
+									<td>0.885</td>
+									<td>Crappie</td>
+									<td>13 Fishing Descent Ice Reel</td>
+								</tr>
+								<tr>
+									<td>170</td>
+									<td>John Oliver</td>
+									<td>0.868</td>
+									<td>Crappie</td>
+									<td>Dangler Rod Holder and Dangler Trip-Up</td>
+								</tr>
+								<tr>
+									<td>175</td>
+									<td>Austin Buckli</td>
+									<td>0.846</td>
+									<td>Crappie</td>
+									<td>Eskimo P1 Propane Rocker Auger</td>
+								</tr>
+								<tr>
+									<td>180</td>
+									<td>Jake Talbot</td>
+									<td>0.831</td>
+									<td>Crappie</td>
+									<td>Eskimo QuickFlip One-Man-Shelter</td>
+								</tr>
+								<tr>
+									<td>185</td>
+									<td>Ross Rubenzer</td>
+									<td>0.818</td>
+									<td>Crappie</td>
+									<td>$50 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>190</td>
+									<td>Denny Sly</td>
+									<td>0.81</td>
+									<td>Crappie</td>
+									<td>Pro Classic Ice Fishing Combo</td>
+								</tr>
+								<tr>
+									<td>195</td>
+									<td>Jenna Pyka</td>
+									<td>0.798</td>
+									<td>Crappie</td>
+									<td>Scheels Outfitters Rectangular Ice Combo Bag + $25 Mega/Holiday GC</td>
+								</tr>
+								<tr>
+									<td>200</td>
+									<td>Eric Klenke</td>
+									<td>0.779</td>
+									<td>Crappie</td>
+									<td>*$1,000 Cash</td>
+								</tr>
+								<tr>
+									<td>205</td>
+									<td>Jim Howe</td>
+									<td>0.762</td>
+									<td>Crappie</td>
+									<td>Wildgame Innovations Handheld Card Viewer Trail Pad</td>
+								</tr>
+								<tr>
+									<td>210</td>
+									<td>Josh Hayes</td>
+									<td>0.744</td>
+									<td>Crappie</td>
+									<td>Eskimo QuickFlip One-Man-Shelter</td>
+								</tr>
+								<tr>
+									<td>215</td>
+									<td>Tim Raap</td>
+									<td>0.721</td>
+									<td>Walleye</td>
+									<td>$50 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>220</td>
+									<td>Michael Bucholz</td>
+									<td>0.709</td>
+									<td>Crappie</td>
+									<td>Rivers Edge Big Foot XL Tree Stand</td>
+								</tr>
+								<tr>
+									<td>225</td>
+									<td>Brennon Staves</td>
+									<td>0.697</td>
+									<td>Walleye</td>
+									<td>Pflueger Monarch Ice Spinning Reel</td>
+								</tr>
+								<tr>
+									<td>230</td>
+									<td>Jake Johnson</td>
+									<td>0.686</td>
+									<td>Walleye</td>
+									<td>$50 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>235</td>
+									<td>Jeffrey Jones</td>
+									<td>0.676</td>
+									<td>Crappie</td>
+									<td>Eskimo Propane Auger</td>
+								</tr>
+								<tr>
+									<td>240</td>
+									<td>Cory Wold</td>
+									<td>0.665</td>
+									<td>Crappie</td>
+									<td>13 Fishing Wicked Ice Combo</td>
+								</tr>
+								<tr>
+									<td>245</td>
+									<td>Dan Sokup</td>
+									<td>0.642</td>
+									<td>Walleye</td>
+									<td>Rapala Electric Fillet Knife</td>
+								</tr>
+								<tr>
+									<td>250</td>
+									<td>Mike Aylieff</td>
+									<td>0.628</td>
+									<td>Crappie</td>
+									<td>Eskimo 6-Inch Hand Auger</td>
+								</tr>
+								<tr>
+									<td>255</td>
+									<td>Damien Bakeman</td>
+									<td>0.617</td>
+									<td>Walleye</td>
+									<td>Eskimo QuickFlip 1</td>
+								</tr>
+								<tr>
+									<td>260</td>
+									<td>Merlin Woodley</td>
+									<td>0.606</td>
+									<td>Walleye</td>
+									<td>Moultrie A-30 Game Camera</td>
+								</tr>
+								<tr>
+									<td>265</td>
+									<td>Josh Hayes</td>
+									<td>0.593</td>
+									<td>Walleye</td>
+									<td>River&#39;s Edge Ladder Stand</td>
+								</tr>
+								<tr>
+									<td>270</td>
+									<td>Jason Ebertowski</td>
+									<td>0.581</td>
+									<td>Crappie</td>
+									<td>Dangler Rod Holder and Dangler Trip-Up</td>
+								</tr>
+								<tr>
+									<td>275</td>
+									<td>Josh Downs</td>
+									<td>0.553</td>
+									<td>Walleye</td>
+									<td>Frabill Straight Line 101 Ice Reel + $25 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>280</td>
+									<td>Bill Mcnamara</td>
+									<td>0.541</td>
+									<td>Walleye</td>
+									<td>Eskimo 43cc 8-in Mako Ice Auger</td>
+								</tr>
+								<tr>
+									<td>285</td>
+									<td>Dan Gillis</td>
+									<td>0.531</td>
+									<td>Walleye</td>
+									<td>IFISH PRO TIP UP</td>
+								</tr>
+								<tr>
+									<td>290</td>
+									<td>Tim Andrew</td>
+									<td>0.525</td>
+									<td>Walleye</td>
+									<td>Vexilar FL-8SE Genz Pack Fish Sonar</td>
+								</tr>
+								<tr>
+									<td>295</td>
+									<td>Bob King</td>
+									<td>0.501</td>
+									<td>Walleye</td>
+									<td>Eskimo FatFish 949i Ice Shack</td>
+								</tr>
+								<tr>
+									<td>300</td>
+									<td>Ryan Selberg</td>
+									<td>0.491</td>
+									<td>Crappie</td>
+									<td>*$500 Cash</td>
+								</tr>
+							</tbody></table>
+						</table>
+					</div>
+					<!-- #table-responsive -->
+				</div>
+			</div>
+
+
+			<div class="row">
+				<div class="col-sm-12">
+					<h2 class="headers">2018 Species Prize Winners</h2>
+					<div class="table-responsive">
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Contestant</th>
+									<th>Weight</th>
+									<th>Species</th>
+									<th>Prize</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Adam Hintz</td>
+									<td>1.453</td>
+									<td>Crappie (Pan fish category)</td>
+								</tr>
+								<tr>
+									<td>Derrik Sheffield</td>
+									<td>4.115</td>
+									<td>Walleye</td>
+								</tr>
+								<tr>
+									<td>Travis Turner</td>
+									<td>8.141</td>
+									<td>Northern</td>
+								</tr>
+							</tbody>
+						</table>
+						<!-- #table-responsive -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 
 <script src="scripts/tableBuilder.js"></script>
 
@@ -345,6 +976,8 @@
 		</div>
 	</div>
 </div>
+
+
 <div class="panel panel-default">
 	<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
 		<div class="panel-heading">
