Added Raffle Prize winners

--- a/pastResults.html
+++ b/pastResults.html
@@ -792,6 +792,176 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="row">
+				<div class="col-sm-12">
+					<h2 class="headers">2018 Raffle Prize Winners</h2>
+					<div class="table-responsive">
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Prize</th>
+									<th>Name of Winner</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Gift Certificate- The Edge</td>
+									<td>Jeff Johnson</td>
+								</tr>
+								<tr>
+									<td>BluGold Basketball Package</td>
+									<td>Alex Matuszak</td>
+								</tr>
+								<tr>
+									<td>BluGold Volleyball/Sandbar and Grill Prize Package</td>
+									<td>Grant Mathson</td>
+								</tr>
+								<tr>
+									<td>BluGold Cross Country/Sandbar and Grill Prize Package</td>
+									<td>David Ming</td>
+								</tr>
+								<tr>
+									<td>BluGold Basketball Package</td>
+									<td>Cory Zwiedelhoser</td>
+								</tr>
+								<tr>
+									<td>BluGold Volleyball Package</td>
+									<td>Jordyn W</td>
+								</tr>
+								<tr>
+									<td>Vexilar Prize Package</td>
+									<td>Tammy Steinbrinks</td>
+								</tr>
+								<tr>
+									<td>Gift Certificate - Lake of the Torches</td>
+									<td>Brett Boyum</td>
+								</tr>
+								<tr>
+									<td>Green Bay Packers Prize Package</td>
+									<td>Aaron Bauer</td>
+								</tr>
+								<tr>
+									<td>Steak Package -Sodexo</td>
+									<td>Paul Modemott</td>
+								</tr>
+								<tr>
+									<td>Gift Certificate - Fon du Lac Band of Lake Superior Chippewa</td>
+									<td>Brielle Stahulak</td>
+								</tr>
+								<tr>
+									<td>St. Croix Fishing Rod- Xcel Energy</td>
+									<td>Derek Running</td>
+								</tr>
+								<tr>
+									<td>Eau Claire Express Prize Package</td>
+									<td>Don Dietz</td>
+								</tr>
+								<tr>
+									<td>$150 Gift Certificate - McQuoid's Inn and Event Center</td>
+									<td>Jerry Berseth</td>
+								</tr>
+								<tr>
+									<td>Vexilar Prize Package</td>
+									<td>David Ming</td>
+								</tr>
+								<tr>
+									<td>Steak Package- Sodexo</td>
+									<td>Rogelio Gonzales</td>
+								</tr>
+								<tr>
+									<td>Paddle - General Beer</td>
+									<td>Luke Gehweiler</td>
+								</tr>
+								<tr>
+									<td>Gift Certificate - LCO Casino and Lodge</td>
+									<td>Tyler Odegard</td>
+								</tr>
+								<tr>
+									<td>Green Bay Packers Prize Package</td>
+									<td>Annette Olson</td>
+								</tr>
+								<tr>
+									<td>Pizza Party-The View</td>
+									<td>Chris Anderson</td>
+								</tr>
+								<tr>
+									<td>Vexilar Prize Package</td>
+									<td>Kris Grenner</td>
+								</tr>
+								<tr>
+									<td>I Fish Pro Tip up</td>
+									<td>Shane Woodley</td>
+								</tr>
+								<tr>
+									<td>Adirondack Chair - General Beer</td>
+									<td>Liz Scott</td>
+								</tr>
+								<tr>
+									<td>Gift Certificate - North Star Casino Resort</td>
+									<td>Larry Konwinski</td>
+								</tr>
+								<tr>
+									<td>$100 Gift Card -Scheels</td>
+									<td>Chris Ortega</td>
+								</tr>
+								<tr>
+									<td>Gift Certificate- The Edge</td>
+									<td>Laura Trachsel</td>
+								</tr>
+								<tr>
+									<td>Dangler Tip up/Trip up</td>
+									<td>Jim Jowlet</td></tr>
+								<tr>
+									<td>$25 Gift Certificate-The View</td>
+									<td>Quincy Chapman</td></tr>
+								<tr>
+									<td>Vexilar Prize Package</td>
+									<td>Dave Joles</td></tr>
+								<tr>
+									<td>I Fish Pro Tip up</td>
+									<td>Collen Stangel</td></tr>
+								<tr>
+									<td>Visit Eau Claire Gift Basket</td>
+									<td>Missie Peterson</td></tr>
+								<tr>
+									<td>$25 Gift Certificate-The View</td>
+									<td>Matt Jones</td>
+								</tr>
+								<tr>
+									<td>Vexilar Prize Package</td>
+									<td>Adam Dodge</td>
+								</tr>
+								<tr>
+									<td>Gift Certificate- Mole Lake Casino</td>
+									<td>Jeff Walker</td>
+								</tr>
+								<tr>
+									<td>Ice Pro Fish Sonar- Scheels</td>
+									<td>Maher</td>
+								</tr>
+								<tr>
+									<td>Paddleboard and Paddle- Scheels</td>
+									<td>Steve Woolever</td>
+								</tr>
+								<tr>
+									<td>$500 Gift Card- Scheels</td>
+									<td>Steve Woolever</td>
+								</tr>
+								<tr>
+									<td>Bradley 6-Rack Digital Meat Smoker- Scheels</td>
+									<td>Neal Jepsen</td>
+								</tr>
+								<tr>
+									<td>Xtreme Motorsports- 2017 Polaris Sportsman 450 4-Wheeler</td>
+									<td>Colton Sander</td>
+								</tr>
+							</tbody>
+						</table>
+						<!-- #table-responsive -->
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
