--- a/pastResults.html
+++ b/pastResults.html
@@ -806,7 +806,7 @@
 							<tbody>
 								<tr>
 									<td>Tim Esselman</td>
-									<td>Propaine Ice Auger</td>
+									<td>Propane Ice Auger</td>
 								</tr>
 							</tbody>
 						</table>
