name change on 2018 raffle tickets

--- a/pastResults.html
+++ b/pastResults.html
@@ -964,7 +964,7 @@
 													</tr>
 													<tr>
 														<td>Paddleboard and Paddle- Scheels</td>
-														<td>Steve Woolever</td>
+														<td>Aaron Woolever</td>
 													</tr>
 													<tr>
 														<td>$500 Gift Card- Scheels</td>
