Update to smaller slider

--- a/prizes.html
+++ b/prizes.html
@@ -129,13 +129,7 @@
 									<!-- Wrapper for carousel items -->
 									<div class="carousel-inner">
 										<div class="item active">
-											<img src="images/prizes/prize1n.png" alt="First Slide">
-										</div>
-										<div class="item">
-											<img src="images/prizes/prize2n.png" alt="Second Slide">
-										</div>
-										<div class="item">
-											<img src="images/prizes/prize3n.png" alt="Third Slide">
+											<img src="images/prizes/crop_prize1n.png" alt="First Slide">
 										</div>
 									</div>
 									<!-- Carousel controls -->
