--- a/prizes.html
+++ b/prizes.html
@@ -129,7 +129,7 @@
 									<!-- Wrapper for carousel items -->
 									<div class="carousel-inner">
 										<div class="item active">
-											<img src="images/prizes/crop_prize.png" alt="First Slide">
+											<img src="images/prizes/crop_prize.PNG" alt="First Slide">
 										</div>
 									</div>
 									<!-- Carousel controls -->
