--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 
 
 				<div class="text-center">
-					<h4 class="headers">UWEC Recreation, Blugold Athletics, and the Wissota Lions Club presents:</h4>
-					<h1 class="headers"><b>5th Annual JIG'S UP Ice Fishing Contest</b></h1>
+					<h4 class="headers">UWEC Recreation, Blugold Athletics, and the Lake Wissota Lions Club presents:</h4>
+					<h1 class="headers"><b>6th Annual JIG'S UP Ice Fishing Contest</b></h1>
 					<img alt="Sponsors Logo" src="images/3logo-bg.png">
 					<div class="horizbar"></div>
 
@@ -192,7 +192,7 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<h3 class="headers"><b>Date:</b></h3>
-							<h3>Saturday, February 10th, 2018</h3>
+							<h3>Saturday, February 9th, 2019</h3>
 							<br />
 							<!-- BREAK -->
 							<br />
@@ -211,8 +211,8 @@
 
 							<h3 class="headers"><b>Prize Information:</b></h3>
 							<blockquote>
-								Over $80,000 in cash and prizes including a
-								<b>2017 Ice Castle Scout</b>, win a <b>Ford F150 Truck</b> if you catch and register the tagged fish! Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big!
+								Over $80,000 in cash and prizes including a <b>Ford F150 Truck!</b>
+								Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big!
 								<b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Raffle prizes include a <b>2017 Polaris
 								Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! Prizes for the top fish by weight in each category: northern, walleye, and pan fish.
 							</blockquote>
@@ -222,6 +222,20 @@
 									more than the legal limit of fish allowed, which for this contest
 									includes northern, walleye, and pan fish.
 								</i>
+							</p>
+							<p>
+								Purchase tickets at the following locations:
+								<ul>
+									<li>Online at jigsup.org</li>
+									<li>Scheels</li>
+									<li>Select Mega Holiday Stations</li>
+									<li>Eau Claire Ford</li>
+									<li>UWEC Recreation</li>
+									<li>The Edge</li>
+									<li>The View</li>
+									<li>The SandBar and Grill</li>
+								</ul>
+								For contest rules and additional information, visit jigsup.org or contact UWEC recreation at (715)836-3377.
 							</p>
 							<br />
 							<!-- BREAK -->
