--- a/liveResults.html
+++ b/liveResults.html
@@ -128,6 +128,9 @@
 							<!-- BREAK -->
 							<h2 class="headers">Live Results</h2>
 							<!-- <h3>View live results <a href="https://jigsup-entry.herokuapp.com/publicList">here</a>!</h3> -->
+							<h3>Join us February 10th on this page for live results.</h3>
+							<br/>
+							<br/>
 							<h3>You can find the final prize winners on the <a href="pastResults.html">past result</a> page!</h3>
 						</div>
 						<div class="col-xs-6">
