finished Website updates

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 									<li>UWEC Recreation</li>
 									<li>The Edge</li>
 									<li>The View</li>
-									<li>The SandBar and Grill</li>
+									<!--<li>The SandBar and Grill</li>-->
 								</ul>
 								For contest rules and additional information, visit jigsup.org or contact UWEC recreation at (715)836-3377.
 							</p>
