--- a/tickets.html
+++ b/tickets.html
@@ -124,8 +124,8 @@
 				<h4 class="headers">Fish Tickets:</h4>
 				<h4>$25, one ticket required for each fish registered, multiple tickets may be purchased </h4>
 				<blockquote>
-					Over $80,000 in cash and prizes including a 2017 Ice Castle Scout, win a Ford F150 Truck if you catch and register the tagged fish! Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can
-					win big! All prizes will be distributed at the event, regardless of the number of fish registered.
+					Over $80,000 in cash and prizes including a <b>Ford F150 Truck!</b> Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can
+					win big!
 				</blockquote>
 
 				<ul class="list">
@@ -139,7 +139,7 @@
 				</ul>
 
 				<h4 class="headers">Fish Ticket Availability:</h4>
-				<h4>Tickets will be available online until 10:00pm on Friday, February 9th. Fish tickets will be available on February 10th, 2017 at The View and at the Weigh-in Stations until 9am for $40. </h4>
+				<h4>Tickets will be available online until 10:00pm on Friday, February 8th. Fish tickets will be available on February 9th, 2019 at The View and at the Weigh-in Stations until 9am for $40. </h4>
 				<blockquote>
 					Fish tickets purchased online will be mailed through February 2nd to the address indicated. After February 2nd, tickets will be available for pick-up at the weigh-in station at The View. NOTE: You do not need to pick up your fish tickets until you are
 					ready to weigh in a fish.
@@ -149,10 +149,10 @@
 				<h4 class="headers">Raffle Tickets:</h4>
 				<h4><b>$5 each or 5 for $20</b></h4>
 				<blockquote>
-					$7,500 in prizes includes a 2017 Polaris Sportsman 450 4-wheeler. Tickets can be purchased up until the drawing on Saturday, February 10th at the weigh-in stations and The View.
+					$7,500 in prizes includes a <b>2018 Polaris Sportsman 450 4-wheeler</b>. Tickets can be purchased up until the drawing on Saturday, February 9th at the weigh-in stations and The View.
 
 					<br />
-					<br /> Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 2nd to the address indicated. After February 2nd, claim tickets will be available
+					<br /> Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 1st to the address indicated. After February 1st, claim tickets will be available
 					for pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm. Need not be present to win.
 				</blockquote>
 
@@ -166,12 +166,11 @@
 					<h3 class="headers">Tickets can also be purchased at: </h3>
 					<ul class="list">
 						<li>Scheels</li>
-						<li>Mega Holiday Stations- Eau Claire and Chippewa Falls</li>
+						<li>Select Mega Holiday Stations- Eau Claire and Chippewa Falls</li>
 						<li>Eau Claire Ford</li>
 						<li>The View at Lake Wissota</li>
 						<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-						<li>UWEC Recreation </h3>
-						</li>
+						<li>UWEC Recreation</li>
 					</ul>
 				</div>
 			</section>
