Footer updates as well as some other smaller updates

--- a/prizes.html
+++ b/prizes.html
@@ -756,9 +756,9 @@
 	<div class="footer hidden-xs">
 		<div class="sponsorBar">
 			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
 			<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 			<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
-			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
 			<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 			<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
 			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
@@ -768,8 +768,8 @@
 			<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
 			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
-
+			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"></a>
+			<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
 		</div>
 		<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
@@ -779,9 +779,9 @@
 		<p class="small-footer">
 			<div class="sponsorBar">
 				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
 				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 				<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
-				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
 				<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 				<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
 				<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
@@ -792,7 +792,7 @@
 				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
 				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
-				
+				<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
 
 			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
