--- a/sponsors.html
+++ b/sponsors.html
@@ -132,13 +132,13 @@
 			<h2 class="headers"><b>Sponsors</b></h2>
 			<div class="row">
 				<div class="col-sm-3 center">
-					<a href="http://www.geteskimo.com/" target="_blank" id="sponsor"><img class="img-responsive center img-ml" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+					<a href="http://www.geteskimo.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 				</div>
 				<div class="col-sm-3 center">
-					<a href="http://www.prestigervauto.com/" target="_blank" id="sponsor"><img class="img-responsive center img-ml" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
+					<a href="http://www.prestigervauto.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 				</div>
 				<div class="col-sm-3 center">
-					<a href="http://www.megacoop.com/" target="_blank" id="sponsor"><img class="img-responsive center img-ml" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
+					<a href="http://www.megacoop.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
 				</div>
 				<div class="col-sm-3 center">
 					<a href="http://www.theedgepubandeatery.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
@@ -155,10 +155,13 @@
 					<a href="http://www.xtrememotorsportsllc.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/xtreme.png" alt="Xtreme Motorsports, LLC"></a>
 				</div>
 				<div class="col-sm-3 center">
-					<a href="http://www.uwec.edu/dining/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
+					<a href="https://www.aceautomall.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
 				</div>
 			</div>
 			<div class="row">
+				<div class="col-sm-3 center">
+					<a href="http://www.uwec.edu/dining/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
+				</div>
 				<div class="col-sm-3 center">
 					<a href="http://www.ttmtech.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 				</div>
