--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
 									<img class="indexTitleSponsor" src="images/sponsors/scheelsLarge.png" alt="Scheels">
 								</a>
 
+								<a href="http://www.eauclaireford.com/" target="_blank">
+									<img class="indexTitleSponsor" src="images/sponsors/ford.png" ald="Ford">
+								</a>
+
 								<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
 									<img class="indexTitleSponsor" src="images/sponsors/Subway.png" alt="Subway">
 								</a>
@@ -174,7 +178,7 @@
 
 				<div class="text-center">
 					<h4 class="headers">UWEC Recreation, Blugold Athletics, and the Lake Wissota Lions Club presents:</h4>
-					<h1 class="headers"><b>6th Annual JIG'S UP Ice Fishing Contest</b></h1>
+					<h1 class="headers"><b>6th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
 					<img alt="Sponsors Logo" src="images/3logo-bg.png">
 					<div class="horizbar"></div>
 
@@ -211,9 +215,9 @@
 
 							<h3 class="headers"><b>Prize Information:</b></h3>
 							<blockquote>
-								Over $80,000 in cash and prizes including a <b>Ford F150 Truck!</b>
+								Over $80,000 in cash and prizes including a 2-year lease on a <b>2019 Ford F150 Truck</b> drawn from all registered Fish Tickets!
 								Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big!
-								<b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Raffle prizes include a <b>2017 Polaris
+								<b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Raffle prizes include a <b>2019 Polaris
 								Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! Prizes for the top fish by weight in each category: northern, walleye, and pan fish.
 							</blockquote>
 							<p>
@@ -291,21 +295,47 @@
 
 		<footer>
 			<div class="footer hidden-xs">
-				<br />
-				<!-- BREAK -->
+				<div class="sponsorBar">
+					<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+					<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
+					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
+					<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
+					<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+					<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
+					<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
+					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
+					<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+					<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+					<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"></a>
+					<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
+				</div>
 				<p>
 					Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-					<br />
-					<!-- BREAK -->
 				</p>
-				<div class="buildn">
-					/build 1.2.1
-				</div>
 			</div>
 			<div class="footer visible-xs">
-				<br />
-				<!-- BREAK -->
 				<p class="small-footer">
+					<div class="sponsorBar">
+						<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+						<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
+						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
+						<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
+						<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+						<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
+						<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
+						<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
+						<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+						<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
+						<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+						<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+						<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+						<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+						<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
+
+					</div>
 					Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 					<br />
 					<!-- BREAK -->
