Updated sponsor bar to reflex title sponsors

--- a/pastResults.html
+++ b/pastResults.html
@@ -1227,6 +1227,8 @@
 					<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
 					<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
 					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
+				</div>
+				<div class="sponsorBar">
 					<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
 					<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 					<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
@@ -1250,6 +1252,8 @@
 						<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
 						<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
 						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
+					</div>
+					<div class="sponsorBar">
 						<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
 						<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 						<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
