--- a/prizes.html
+++ b/prizes.html
@@ -755,9 +755,9 @@
 <footer>
 	<div class="footer hidden-xs">
 		<div class="sponsorBar">
-			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
-			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
-			<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
+			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
+			<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 		</div>
 		<div class="sponsorBar">
 			<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
@@ -766,6 +766,8 @@
 			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
 			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+		</div>
+		<div class="sponsorBar">
 			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
 			<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
@@ -780,9 +782,9 @@
 	<div class="footer visible-xs">
 		<p class="small-footer">
 			<div class="sponsorBar">
-				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
-				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
-				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
+				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
+				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 			</div>
 			<div class="sponsorBar">
 				<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
@@ -791,13 +793,14 @@
 				<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 				<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
 				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+			</div>
+			<div class="sponsorBar">
 				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
 				<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
 				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 				<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
-
 			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br />
