Change at the "weigh-in stations and the View"

--- a/tickets.html
+++ b/tickets.html
@@ -139,9 +139,9 @@
 				</ul>
 
 				<h4 class="headers">Fish Ticket Availability:</h4>
-				<h4>Tickets will be available online until 10:00pm on Friday, February 8th. Fish tickets will be available on February 9th, 2019 at The View and at the Weigh-in Stations until 9am for $40. </h4>
+				<h4>Tickets will be available online until 10:00pm on Friday, February 8th. Fish tickets will be available on February 9th, 2019 at the weigh-in stations and The View until 9am for $40. </h4>
 				<blockquote>
-					Fish tickets purchased online will be mailed through February 1st to the address indicated. After February 1st, tickets will be available for pick-up at the weigh-in station at The View. NOTE: You do not need to pick up your fish tickets until you are
+					Fish tickets purchased online will be mailed through February 1st to the address indicated. After February 1st, tickets will be available for pick-up at the weigh-in stations in The View. NOTE: You do not need to pick up your fish tickets until you are
 					ready to weigh in a fish.
 
 				</blockquote>
